Removed scrollbars, fixed personal expense pointage style, and addressed top line issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
 body {
   user-select: none;
   -webkit-user-select: none;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 /* --- ANIMATIONS GLOBALES --- */
